Fixed button colors, spacing between content.

--- a/style.css
+++ b/style.css
@@ -29,13 +29,7 @@ header .container{
 header h1{
     font-size: 60px;
 }
-header h3{
-    font-size: 28px;
-}
-.container h3{
-    font-size: 30px;
-    color: grey;
-}
+
 .top-menu{
     display: flex;
     justify-content: space-between;
@@ -59,10 +53,14 @@ header h3{
    align-items: center;
    justify-content: center;
    height: 800px;
+   color: #fff;
 }
-h1,h3,p,a{
+h3,p,a{
     margin: 0;
     text-decoration: none;
+}
+h3 {
+    font-size: 30px;
 }
 h1{
    font-size: 40px; 
@@ -103,9 +101,8 @@ h1{
     padding: 0px 0px 14px 0px;
 }
 
-
 .blue-btn{
-    background-color: #375185;
+    background-color: #3751B5;
     color: white;
     padding: 15px 42px;
     border-radius: 3px;
@@ -116,7 +113,7 @@ h1{
 .hr{
     width: 180px;
     border: 1px solid rgb(31, 31, 184);
-    margin: 80px auto 60px auto;
+    margin: 90px auto 40px auto;
     padding: 0px 50px 0px 50px;
 }
 .content{
@@ -124,18 +121,18 @@ h1{
     padding: 40px 0px 30px 0px;
     text-align: center;
     margin: 0 auto;
+    color: #808083;
+    font-size: 22px;
 
 }
-.content h3,h2{
-    color: #808083;
-    font-size: 35px;
-}
+
 .content p{
-   color: grey;
    font-size: 17px;
 }
 .grey{
     background-color: #F5F5F5;
+    margin-top: 80px;
+    padding: 40px 0px 80px 0px;
 }
 #tour-header{
     padding-top: 10px;
@@ -149,7 +146,7 @@ h1{
 .tour-div{
     width:364px;
     padding: 50px 0px 50px 0px;
-  
+    color: #808083;
 }
 
 #logo1{
@@ -165,7 +162,6 @@ h1{
 }
 footer{
     background-color: #526D82;
-    padding: 20px 0px 20px 0px;
 }
 .outer-div{
     display: flex;
@@ -173,13 +169,18 @@ footer{
     padding: 10px;
     color: #fff;
     align-items: center;
-    font-size: 20px;
+    font-size: 14px;
 }
 .fa-brands{
-    font-size: 30px;
+    font-size: 25px;
     padding: 5px;
 }
 #input-block{
     padding: 15px 110px 15px 20px;
     border-radius: 2px;
+}
+form td{
+    display:  inline-table;
+    padding:10px;
+    align-items: center;
 }
